# seizure_detection_ll

./: .gitignore  README.md  pyproject.toml
src/seizure_detection_ll/: __init__.py  detector.py
